<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="10dp"
    android:paddingHorizontal="12dp"
    android:background="@color/backgroundBox">

    <!-- Host name or Profile name -->
    <TextView
        android:id="@+id/hostName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Name"
        android:textSize="16sp"
        android:textColor="@color/headerPrimary"
        android:maxLines="1"
        android:ellipsize="end" />

    <!-- Delete button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textAllCaps="false" />

</LinearLayout>