<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CommUnity"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/headerPrimary" />

    <TextView
        android:id="@+id/poweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="powered by static0"
        android:textSize="14sp"
        android:textColor="@color/textPrimary"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3E50B4"
        android:visibility="gone"
        android:text="Log in"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/button_color"
        android:textColor="@color/button_text_color"/>

</LinearLayout>