...
            android:text="@string/filter"
            android:textColor="@color/button_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
...
